# pre-commit-workshop

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  example.py  pyproject.toml
src/filename_length_check/: cli.py  supporting_functions.py
src/nicks_hooks/: cli.py  filename_length_hook.py
