[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "filename-length-hook"
version = "0.1.0"
authors = [{name = "Nick Cole", email = "nickc6424@gmail.com"},]
description = "A pre-commit hook to check filename lengths."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",  # update later
    "Programming Language :: Python"
]

dependencies = []
requires-python = ">=3.8"
optional-dependencies.dev = [
    "pre-commit",  # so you can run hooks on the codebase
    "pytest",  # remember to add tests for your hook
]

scripts.filename-len = "nicks_hooks.cli:main"

# optional (if you are making a package)
[tool.setuptools.packages.find]
where = ["src"]

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "ES01",
    "EX01",
    "SA01",
    "SS06"
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear rules
    "C", # mccabe rules
    "E", # pycodestyle error rules
    "F", # pyflakes rules
    "I", # isort rules
    "W", # pycodestyle warning rules
]
ignore = [
    "C901", # max-complexity-10
    "E501", # line-too-long
]
